manifests/notify/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: notify-route
spec:
  entryPoints:
  - websecure
  - web
  routes:
  - kind: Rule
    match: Host(`notify.alexbissessur.dev`)
    services:
    - name: ntfy
      port: 80
  tls:
    certResolver: le
